--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -94,7 +94,7 @@ brews:
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
 
     # Folder inside the repository to put the formula.
-    folder: Formula
+    directory: Formula
 
     # Your app's homepage.
     homepage: "https://github.com/abruneau/{{ .ProjectName }}"
