chore: Clean up code and remove unused files, plus add support for HTTP tests

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -9,6 +9,10 @@ Dynatrace:
   ApiKey: ""
   # Input directory containing Dynatrace synthetics tests definitions
   Input: ""
+  # Filters to apply to the list of tests separated by & symbol
+  Filters: ""
+  # List of test IDs to fetch
+  IdList: []
 
 
 # Datadog Configuration
