Add the ability to add custom tags to tests

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -13,6 +13,8 @@ Dynatrace:
   Filters: ""
   # List of test IDs to fetch
   IdList: []
+  # List of custom tags to add to the tests
+  CustomTags: []
 
 
 # Datadog Configuration
