--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -46,18 +46,20 @@ changelog:
 release:
   prerelease: auto
 
-brews:
-  - # Name of the recipe
-    #
-    # Default: ProjectName
-    # Templates: allowed
-    name: "{{ .ProjectName }}"
-
-    # NOTE: make sure the url_template, the token and given repo (github or
-    # gitlab) owner and name are from the same kind.
-    # We will probably unify this in the next major version like it is
-    # done with scoop.
-
+homebrew_casks:
+  - name: "{{ .ProjectName }}"
+    directory: Casks # or remove this option
+    # make the old formula conflict with the cask:
+    conflicts:
+      - formula: "{{ .ProjectName }}"
+    # if your app/binary isn't signed and notarized, you'll need this:
+    hooks:
+      post:
+        install: |
+          if system_command("/usr/bin/xattr", args: ["-h"]).exit_status == 0
+            # replace 'foo' with the actual binary name
+            system_command "/usr/bin/xattr", args: ["-dr", "com.apple.quarantine", "#{staged_path}/{{ .ProjectName }}"]
+          end
     # GitHub/GitLab repository to push the formula to
     repository:
       # Repository owner.
@@ -81,13 +83,14 @@ brews:
       # provided to GoReleaser
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
 
-    # URL which is determined by the given Token (github, gitlab or gitea).
-    #
-    # Default depends on the client.
-    # Templates: allowed
-    url_template: "https://github.com/abruneau/{{ .ProjectName }}/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
+      # URL which is determined by the given Token (github, gitlab or gitea).
+      #
+      # Default depends on the client.
+      # Templates: allowed
+    url:
+      template: "https://github.com/abruneau/{{ .ProjectName }}/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
 
-    # Git author used to commit to the repository.
+      # Git author used to commit to the repository.
     commit_author:
       name: abruneau
       email: antonin.bruneau@gmail.com
@@ -96,9 +99,6 @@ brews:
     #
     # Templates: allowed
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
-
-    # Folder inside the repository to put the formula.
-    directory: Formula
 
     # Your app's homepage.
     homepage: "https://github.com/abruneau/{{ .ProjectName }}"
